fix: icons not showing in player

--- a/user.css
+++ b/user.css
@@ -300,7 +300,7 @@ h3,
   display: block;
 }
 
-.gSLhUO path,
+.main-navBar-navBarLink .gSLhUO path,
 .icon > svg,
 .x-searchInput-searchInputIconContainer path,
 .show-episodeBlock-playerActions svg, 
